# flexcore

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README  README.md  include_directories.cmake
benchmarks/: CMakeLists.txt  benchmarkfunctions.cpp  benchmarkfunctions.h  port_benchmarks.cpp  range_benchmarks.cpp
docs/: ActiveConnectionProxy.md  CMakeLists.txt  CoreConcept.md  GETTING_STARTED.md  Glossary.md  GraphicalGraphRepresentation.md  ParallelRegion.md  ParallelScheduler.md  Serialization.md  StyleGuide.md  USING  USING.md  chainingconnections.md  designrationale.md  doxyfile  doxyfile.in  home.md  knownpitfalls.md  ports.md  usertips.md
flexcore/: CMakeLists.txt  flexcore-config.cmake  flexcore-config.cmake.in  infrastructure.cpp  infrastructure.hpp  ports.hpp
flexcore/core/: connectables.hpp  connection.hpp  connection_util.hpp  exceptions.hpp  function_traits.hpp  traits.hpp  tuple_meta.hpp
flexcore/extended/: base_node.cpp  base_node.hpp  node_fwd.hpp
flexcore/extended/graph/: graph.cpp  graph.hpp  graph_connectable.hpp  traits.hpp
flexcore/extended/nodes/: buffer.hpp  event_nodes.hpp  generic.hpp  region_worker_node.hpp  state_nodes.hpp  terminal.hpp
flexcore/extended/ports/: connection_buffer.hpp  node_aware.hpp  token_tags.hpp
flexcore/extended/visualization/: visualization.cpp  visualization.hpp
flexcore/pure/: event_sinks.hpp  event_sources.hpp  mux_ports.hpp  port_connection.hpp  pure_node.hpp  pure_ports.hpp  state_sink.hpp  state_sources.hpp
flexcore/pure/detail/: active_connection_proxy.hpp  port_traits.hpp  port_utils.hpp
flexcore/range/: actions.hpp  algorithm.hpp
flexcore/range/nodes/: list_manipulation.hpp
flexcore/scheduler/: clock.cpp  clock.hpp  cyclecontrol.cpp  cyclecontrol.hpp  parallelregion.cpp  parallelregion.hpp  parallelscheduler.cpp  parallelscheduler.hpp  scheduler.hpp  serialschedulers.cpp  serialschedulers.hpp
flexcore/utils/: demangle.cpp  demangle.hpp  generic_container.hpp  settings_container.hpp
flexcore/utils/logging/: logger.cpp  logger.hpp
flexcore/utils/serialisation/: deserializer.hpp
flexcore/utils/settings/: jsonfile_setting_backend.hpp  settings.hpp  settings_backend.hpp  settings_container.hpp
include/: traits.hpp
src/: CMakeLists.txt  flexcore-config.cmake  infrastructure.cpp  infrastructure.hpp  main.cpp  ports.hpp
src/clock/: clock.cpp  clock.hpp
src/core/: Scheduler.cpp  Scheduler.hpp  connectables.hpp  connection.hpp  fork_connection.hpp  function_traits.hpp  named.hpp  ports.hpp  traits.hpp  tuple_meta.hpp  type_proxy.hpp
src/core/detail/: active_connection_proxy.hpp  active_sink_proxy.hpp  active_source_proxy.hpp  connection.hpp  connection_utils.hpp
src/extended/: base_node.hpp
src/extended/graph/: graph.hpp  graph_connectable.hpp  traits.hpp
src/extended/nodes/: buffer.hpp  event_nodes.hpp  generic.hpp  region_worker_node.hpp  state_nodes.hpp
src/extended/ports/: connection_buffer.hpp  node_aware.hpp  token_tags.hpp
src/graph/: graph.cpp  graph.hpp  graph_connectable.hpp  graph_interface.hpp
src/logging/: logger.cpp  logger.hpp
src/nodes/: base_node.cpp  base_node.hpp  buffer.hpp  data_sources.hpp  event_nodes.hpp  generic.hpp  list_manipulation.hpp  list_processing.hpp  node_interface.hpp  pure_node.hpp  region_worker_node.hpp  state_nodes.hpp
src/ports/: connection_buffer.hpp  connection_util.hpp  dev.hpp  event_buffer.hpp  event_ports.hpp  fancy_ports.hpp  mux_ports.hpp  node_aware.hpp  node_aware_port.hpp  port_traits.hpp  ports.hpp  pure_ports.hpp  region_aware.hpp  region_aware_port.hpp  state_ports.hpp  statebuffer.hpp  stream_ports.hpp  token_tags.hpp
src/pure/: event_sinks.hpp  event_sources.hpp  port_connection.hpp  pure_node.hpp  pure_ports.hpp  state_sink.hpp  state_sources.hpp
src/range/: actions.hpp  algorithm.hpp
src/scheduler/: clock.hpp  cyclecontrol.cpp  cyclecontrol.hpp  parallelregion.cpp  parallelregion.hpp  parallelscheduler.cpp  parallelscheduler.hpp  serialschedulers.cpp  serialschedulers.hpp
src/serialisation/: configfile.hpp  deserializer.hpp  serializer.hpp
src/settings/: jsonfile_setting_backend.hpp  settings.hpp
src/threading/: Scheduler.hpp  cyclecontrol.cpp  cyclecontrol.hpp  minimalscheduler.cpp  minimalscheduler.hpp  parallelregion.cpp  parallelregion.hpp  parallelscheduler.cpp  parallelscheduler.h  parallelscheduler.hpp  scheduler.cpp  scheduler.hpp  serialschedulers.cpp
src/tokens/: testing.hpp
src/util/: generic_container.hpp  settings_container.hpp
tests/: CMakeLists.txt  examples.cpp  gcc_bug_check.cpp  runner.cpp
tests/clock/: TestClock.cpp
tests/core/: Runner.cpp  TestConnection.cpp  TestConnection.h  TestEvents.cpp  TestScheduler.cpp  TestTraits.cpp  movable_connectable.hpp  test_connectables.cpp  test_connection.cpp  test_traits.cpp
tests/graph/: test_graph.cpp
tests/logging/: test_logging.cpp
tests/nodes/: owning_node.hpp  test_base_node.cpp  test_buffer.cpp  test_event_nodes.cpp  test_generic.cpp  test_list_manipulation.cpp  test_list_processing.cpp  test_moving.cpp  test_node_interface.cpp  test_region_worker_node.cpp  test_state_nodes.cpp
tests/ports/: TestEvents.cpp  TestStreams.cpp  Testdev.cpp  test_event_buffer.cpp  test_mux_ports.cpp  test_node_aware.cpp  test_node_with_lambda.cpp  test_state_buffer.cpp  test_stream_query_function.cpp  test_stream_query_node.cpp  test_stream_state.cpp
tests/pure/: sink_fixture.hpp  test_events.cpp  test_moving.cpp  test_mux_ports.cpp  test_state_sinks.cpp
tests/range/: test_range.cpp
tests/scheduler/: TestClock.cpp  test_cyclecontrol.cpp  test_parallel_region.cpp  test_parallelscheduler.cpp  test_serialscheduler.cpp
tests/serialisation/: test_configfile.cpp  test_deserializer.cpp
tests/settings/: test_setting_backend.cpp  test_settings.cpp
tests/threading/: TestScheduler.cpp  test_cyclecontrol.cpp  test_minimalscheduler.cpp  test_parallel_region.cpp  test_parallelscheduler.cpp  test_region.cpp  test_scheduler.cpp  test_serialscheduler.cpp
tests/tokens/: test_moving.cpp  test_testing.cpp
tests/util/: test_generic_container.cpp
(+61 files in other folders)
